---------------------------------------------------------------------------------------------------
Version: 3.2.0
Date: ????
  Features:
    - Shift + click on a recipe with one product to view the product's page
  Bugfixes:
    - Fixed a crash if a prototype (somehow) doesn't have a stored translation (#80)
    - Fixed that mining drills were not being processed for technology unlocks
---------------------------------------------------------------------------------------------------
Version: 3.1.5
Date: 2021-09-19
  Changes:
    - Added Brazillian Portuguese translation (by BM123499)
    - Quick reference windows now open next to their parent window
  Bugfixes:
    - Fixed that dragging a quick reference window would reset its position for a frame
    - Fixed that settings wouldn't be preserved if they were falsey
---------------------------------------------------------------------------------------------------
Version: 3.1.4
Date: 2021-09-02
  Bugfixes:
    - Fixed a crash when using the navigation hotkeys with a non-custom GUI open
    - Fixed a crash when using the search hotkey in some windows
---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: 2021-08-18
  Bugfixes:
    - Fixed a crash when an item has a place result that isn't in the Recipe Book
    - Fixed navigation hotkeys not working if search was open
    - Fixed the toggle quick ref button wouldn't be updated if it was in the stickied info GUI
---------------------------------------------------------------------------------------------------
Version: 3.1.2
Date: 2021-08-17
  Bugfixes:
    - Fixed a crash when a mod unlocks a research during config changed before Recipe Book does its own configuration changes
    - Fixed a crash when clicking the Factory Planner dimmer frame while an info GUI is stuck to search
    - Fixed that the search GUI would not be brought to the front when clicking the FP dimmer frame