@@ -115,6 +115,8 @@ rb-no-content-warning=[img=warning-white] Nothing to show based on current setti
 rb-no-results=[img=warning-white] No results.
 rb-normal=Normal
 rb-offshore-pump=Offshore pump
+rb-open-info-relative-to-gui-description=When enabled, using the inspect hotkey on an object will show that object's info page relative to the currently open GUI. If no GUI is open, or the opened GUI does not support relative anchoring, it will open as a standalone window in the middle of the screen.
+rb-open-info-relative-to-gui=Open info page relative to current GUI
 rb-open-in-technology-window=Open in technology window
 rb-open-list-in-new-window=Open this list in a new window.
 rb-open-quick-ref-window=Open quick reference window
